--- a/src/back-end/UserLayer/NotificationService/NotificationAPI/NotificationStore/NotificationStore.csproj
+++ b/src/back-end/UserLayer/NotificationService/NotificationAPI/NotificationStore/NotificationStore.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MailKit" Version="4.12.1" />
     <PackageReference Include="MassTransit" Version="8.5.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
     <PackageReference Include="MimeKit" Version="4.12.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
