--- a/src/back-end/UserLayer/NotificationService/NotificationAPI/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/NotificationService/NotificationAPI/docker-compose.override.yaml
@@ -11,6 +11,11 @@ services:
       DefaultConnection__NotificationsCollectionName: notifications
       DefaultConnection__DeliveryLogsCollectionName: delivery_logs
 
+      # JWT
+      Jwt__Issuer: http://stls_backend:8080
+      Jwt__Audience: http://stls_backend:8080
+      Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
+
       # RabbitMQ base config
       RabbitMQ__Host: rabbitmq
       RabbitMQ__Port: 5672
