--- a/src/back-end/RabbitMQ/docker-compose.override.yaml
+++ b/src/back-end/RabbitMQ/docker-compose.override.yaml
@@ -4,8 +4,8 @@ services:
       - '5672:5672'
       - '15672:15672'
     environment:
-      - RABBITMQ_DEFAULT_USER=admin
-      - RABBITMQ_DEFAULT_PASS=admin123
+      - RABBITMQ_DEFAULT_USER=rabbitmq
+      - RABBITMQ_DEFAULT_PASS=rabbitmq123!@#
     volumes:
       - topics_data:/var/lib/rabbitmq
     restart: always
