--- a/src/back-end/UserLayer/NotificationService/Mongo/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/NotificationService/Mongo/docker-compose.override.yaml
@@ -6,8 +6,8 @@ services:
       - notification_mongodb_data:/data/db
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin123
+      MONGO_INITDB_ROOT_USERNAME: mongo
+      MONGO_INITDB_ROOT_PASSWORD: mongo123!@#
 
 volumes:
   notification_mongodb_data:
