--- a/src/back-end/UserLayer/UserService/MSSQL/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/UserService/MSSQL/docker-compose.override.yaml
@@ -3,7 +3,7 @@ services:
   user_mssql:
     environment:
       - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=MyPass@word
+      - MSSQL_SA_PASSWORD=mssql123!@#
       - MSSQL_PID=Express
     ports:
       - '1433:1433'
