--- a/src/back-end/TrafficLayer/TrafficDataAnalyticsService/TrafficDataAnalyticsAPI/TrafficDataAnalyticsStore/TrafficDataAnalyticsStore.csproj
+++ b/src/back-end/TrafficLayer/TrafficDataAnalyticsService/TrafficDataAnalyticsAPI/TrafficDataAnalyticsStore/TrafficDataAnalyticsStore.csproj
@@ -17,6 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../../../LogLayer/LogMessages/LogMessages.csproj" />
+    <ProjectReference Include="../../../../SensorLayer/SensorMessages/SensorMessages.csproj" />
     <ProjectReference Include="..\TrafficDataAnalyticsData\TrafficDataAnalyticsData.csproj" />
     <ProjectReference Include="..\..\..\TrafficMessages\TrafficMessages.csproj" />
   </ItemGroup>
