--- a/src/back-end/TrafficLayer/TrafficDataAnalyticsService/TrafficDataAnalyticsAPI/docker-compose.yaml
+++ b/src/back-end/TrafficLayer/TrafficDataAnalyticsService/TrafficDataAnalyticsAPI/docker-compose.yaml
@@ -1,16 +1,17 @@
 services:
-  traffic_data_analytics_api:
-    image: ath21/stls:traffic_data_analytics_api
-    container_name: traffic_data_analytics_api_container
+  traffic_analytics_api:
+    image: ath21/stls:traffic_analytics_api
+    container_name: traffic_analytics_api_container
     networks:
-      - traffic_data_analytics_network
+      - traffic_analytics_network
       - rabbitmq_network
 
 networks:
-  traffic_data_analytics_network:
-    name: traffic_data_analytics_network
+  traffic_analytics_network:
+    name: traffic_analytics_network
     driver: bridge
     external: true
+
   rabbitmq_network:
     name: rabbitmq_network
     driver: bridge
