--- a/src/back-end/UserLayer/UserService/UserAPI/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/UserService/UserAPI/docker-compose.override.yaml
@@ -3,14 +3,16 @@ services:
     ports:
       - '5055:8080'
     environment:
+      # ASP.NET Core
+      ASPNETCORE_ENVIRONMENT: Development
+
+      # MSSQL
       ConnectionStrings__DefaultConnection: Server=user_mssql,1433;Database=UserDb;User Id=sa;Password=MyPass@word;TrustServerCertificate=True
 
       # JWT
       Jwt__Issuer: http://stls_backend:8080
       Jwt__Audience: http://stls_backend:8080
       Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
-
-      ASPNETCORE_ENVIRONMENT: Development
 
       # RabbitMQ connection
       RabbitMQ__Host: rabbitmq
