--- a/src/back-end/TrafficLayer/TrafficLightCoordinatorService/PostgreSQL/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/TrafficLightCoordinatorService/PostgreSQL/docker-compose.override.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - traffic_light_pgdata:/var/lib/postgresql/data
+      - traffic_light_postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} -h 127.0.0.1"]
       interval: 10s
@@ -16,7 +16,7 @@ services:
     restart: always
 
 volumes:
-  traffic_light_pgdata:
-    name: traffic_light_pgdata
+  traffic_light_postgres_data:
+    name: traffic_light_postgres_data
     driver: local
 
