--- a/src/back-end/UserLayer/NotificationService/NotificationAPI/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/NotificationService/NotificationAPI/docker-compose.override.yaml
@@ -56,5 +56,5 @@ services:
 
     depends_on:
       notification_mongo:
-        condition: service_started
+        condition: service_healthy
     restart: always
