--- a/src/back-end/TrafficLayer/TrafficAnalyticsService/PostgreSQL/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/TrafficAnalyticsService/PostgreSQL/docker-compose.override.yaml
@@ -1,5 +1,7 @@
 services:
   traffic_analytics_postgres:
+    image: postgres:16
+    container_name: traffic_analytics_postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres123
@@ -8,9 +10,14 @@ services:
       - "5432:5432"
     volumes:
       - traffic_analytics_postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} -h 127.0.0.1"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+    restart: unless-stopped
 
 volumes:
   traffic_analytics_postgres_data:
     name: traffic_analytics_postgres_data
     driver: local
-
