--- a/src/back-end/UserLayer/NotificationService/Mongo/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/NotificationService/Mongo/docker-compose.override.yaml
@@ -1,13 +1,22 @@
 services:
   notification_mongo:
+    image: mongo:6
+    container_name: notification_mongo
     ports:
-      - '27018:27017'
+      - "27018:27017"
     volumes:
       - notification_mongodb_data:/data/db
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: mongo123
+    healthcheck:
+      test: >
+        ["CMD-SHELL", "mongosh --username $${MONGO_INITDB_ROOT_USERNAME} --password $${MONGO_INITDB_ROOT_PASSWORD} --authenticationDatabase admin --eval 'db.adminCommand({ping:1})' || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 20s
 
 volumes:
   notification_mongodb_data:
