--- a/src/back-end/UserLayer/UserService/UserAPI/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/UserService/UserAPI/docker-compose.override.yaml
@@ -48,5 +48,5 @@ services:
 
     depends_on:
       user_mssql:
-        condition: service_healthy
+        condition: service_started
     restart: always
