--- a/src/back-end/LogLayer/LogService/LogAPI/LogStore/LogStore.csproj
+++ b/src/back-end/LogLayer/LogService/LogAPI/LogStore/LogStore.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../../LogMessages/LogMessages.csproj" />
     <ProjectReference Include="..\LogData\LogData.csproj" />
     <ProjectReference Include="..\..\..\..\UserLayer\UserMessages\UserMessages.csproj" />
     <ProjectReference Include="..\..\..\..\TrafficLayer\TrafficMessages\TrafficMessages.csproj" />
