--- a/src/back-end/LogLayer/LogService/LogAPI/Dockerfile
+++ b/src/back-end/LogLayer/LogService/LogAPI/Dockerfile
@@ -1,31 +1,28 @@
-# 🔹 Βάση για το τελικό runtime image
+# Base image for the runtime
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
 EXPOSE 8080
 
-# 🔹 Build stage
+# Build stage
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-# 🔹 Αντιγραφή ολόκληρων layers ώστε να τηρούνται τα relative paths
+# Copy all project layers to keep relative paths
 COPY LogLayer LogLayer/
-COPY UserLayer UserLayer/
-COPY TrafficLayer TrafficLayer/
-COPY SensorLayer SensorLayer/
 
-# 🔹 Restore
+# Restore dependencies
 RUN dotnet restore LogLayer/LogService/LogAPI/LogStore/LogStore.csproj
 
-# 🔹 Build
+# Build the project
 RUN dotnet build LogLayer/LogService/LogAPI/LogStore/LogStore.csproj -c $BUILD_CONFIGURATION -o /app/build
 
-# 🔹 Publish
+# Publish the project
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish LogLayer/LogService/LogAPI/LogStore/LogStore.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# 🔹 Τελικό image
+# Final runtime image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
