--- a/src/back-end/TrafficLayer/IntersectionControllerService/IntersectionControllerAPI/IntersectionControllerStore/IntersectionControllerStore.csproj
+++ b/src/back-end/TrafficLayer/IntersectionControllerService/IntersectionControllerAPI/IntersectionControllerStore/IntersectionControllerStore.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="../../../../LogLayer/LogMessages/LogMessages.csproj" />
     <ProjectReference Include="../../../../SensorLayer/SensorMessages/SensorMessages.csproj" />
     <ProjectReference Include="../../../TrafficMessages/TrafficMessages.csproj" />
+    <ProjectReference Include="../IntersectionControllerData/IntersectionControllerData.csproj" />
   </ItemGroup>
 
 </Project>
