--- a/src/back-end/TrafficLayer/IntersectionControllerService/IntersectionControllerAPI/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/IntersectionControllerService/IntersectionControllerAPI/docker-compose.override.yaml
@@ -9,9 +9,16 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
 
       # ===============================
+      # JWT Authentication
+      # ===============================
+      Jwt__Issuer: http://stls_backend:8080
+      Jwt__Audience: http://stls_backend:8080
+      Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
+
+      # ===============================
       # Redis Connection
       # ===============================
-      Redis__Host: redis
+      Redis__Host: intersection_redis
       Redis__Port: 6379
       Redis__Password: ""
       Redis__Database: 0
@@ -64,3 +71,8 @@ services:
       # ===============================
       RabbitMQ__RoutingKeys__TrafficLogsAudit: log.traffic.intersection_controller_service.audit
       RabbitMQ__RoutingKeys__TrafficLogsError: log.traffic.intersection_controller_service.error
+
+    depends_on:
+      intersection_redis:
+        condition: service_healthy
+    restart: always
