--- a/src/back-end/TrafficLayer/TrafficLightControlService/TrafficLightControlAPI/TrafficLightControlStore/TrafficLightControlStore.csproj
+++ b/src/back-end/TrafficLayer/TrafficLightControlService/TrafficLightControlAPI/TrafficLightControlStore/TrafficLightControlStore.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="../../../TrafficMessages/TrafficMessages.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Consumers/" />
+  </ItemGroup>
+
 </Project>
