--- a/src/back-end/TrafficLayer/TrafficLightControlService/TrafficLightControlAPI/Dockerfile
+++ b/src/back-end/TrafficLayer/TrafficLightControlService/TrafficLightControlAPI/Dockerfile
@@ -1,30 +1,33 @@
-# 🔹 Βάση runtime image (για το τελικό container)
+# Base runtime image (final container)
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
 EXPOSE 8080
 
+# Install required libraries
 RUN apt-get update && apt-get install -y libgssapi-krb5-2
 
-# 🔹 Build stage
+# Build stage
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
+# Copy solution sources
 COPY TrafficLayer TrafficLayer/
+COPY LogLayer/LogMessages LogLayer/LogMessages/
 
-# 🔹 Restore
-RUN dotnet restore TrafficLayer/TrafficLightControlService/TrafficLightControlAPI/TrafficLightControlStore/TrafficLightControlStore.csproj
+# Restore dependencies
+RUN dotnet restore TrafficLayer/TrafficLightControllerService/TrafficLightControllerAPI/TrafficLightControllerStore/TrafficLightControllerStore.csproj
 
-# 🔹 Build
-RUN dotnet build TrafficLayer/TrafficLightControlService/TrafficLightControlAPI/TrafficLightControlStore/TrafficLightControlStore.csproj -c $BUILD_CONFIGURATION -o /app/build
+# Build project
+RUN dotnet build TrafficLayer/TrafficLightControllerService/TrafficLightControllerAPI/TrafficLightControllerStore/TrafficLightControllerStore.csproj -c $BUILD_CONFIGURATION -o /app/build
 
-# 🔹 Publish
+# Publish project
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish TrafficLayer/TrafficLightControlService/TrafficLightControlAPI/TrafficLightControlStore/TrafficLightControlStore.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish TrafficLayer/TrafficLightControllerService/TrafficLightControllerAPI/TrafficLightControllerStore/TrafficLightControllerStore.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# 🔹 Τελικό image
+# Final image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "TrafficLightControlStore.dll"]
+ENTRYPOINT ["dotnet", "TrafficLightControllerStore.dll"]
