--- a/src/back-end/SensorLayer/VehicleDetectionService/VehicleDetectionAPI/VehicleDetectionStore/VehicleDetectionStore.csproj
+++ b/src/back-end/SensorLayer/VehicleDetectionService/VehicleDetectionAPI/VehicleDetectionStore/VehicleDetectionStore.csproj
@@ -17,8 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../../../LogLayer/LogMessages/LogMessages.csproj" />
+    <ProjectReference Include="../../../DetectionDB/DetectionData/DetectionData.csproj" />
     <ProjectReference Include="../../../SensorMessages/SensorMessages.csproj" />
-    <ProjectReference Include="..\..\..\DetectionData\DetectionData.csproj" />
   </ItemGroup>
 
 </Project>
