--- a/src/back-end/SensorLayer/IncidentDetectionService/IncidentDetectionAPI/Dockerfile
+++ b/src/back-end/SensorLayer/IncidentDetectionService/IncidentDetectionAPI/Dockerfile
@@ -1,29 +1,30 @@
-# 🔹 Βάση runtime image (για το τελικό container)
+# Base runtime image for the final container
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
 EXPOSE 8080
 
-# 🔹 Build stage
+# Build stage
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-# 🔹 Αντιγραφή όλων των απαραίτητων φακέλων
-# ⚠️ Περιλαμβάνει ολόκληρο το UserLayer ώστε να πιάσει σωστά όλα τα relative paths
+# Copy all required folders
+# Includes the entire UserLayer to ensure relative paths work correctly
 COPY SensorLayer SensorLayer/
+COPY LogLayer/LogMessages LogLayer/LogMessages/
 
-# 🔹 Restore
+# Restore dependencies
 RUN dotnet restore SensorLayer/IncidentDetectionService/IncidentDetectionAPI/IncidentDetectionStore/IncidentDetectionStore.csproj
 
-# 🔹 Build
+# Build project
 RUN dotnet build SensorLayer/IncidentDetectionService/IncidentDetectionAPI/IncidentDetectionStore/IncidentDetectionStore.csproj -c $BUILD_CONFIGURATION -o /app/build
 
-# 🔹 Publish
+# Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish SensorLayer/IncidentDetectionService/IncidentDetectionAPI/IncidentDetectionStore/IncidentDetectionStore.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# 🔹 Τελικό image
+# Final image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
